--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,17 @@
         .glow-node { box-shadow: 0 0 15px #00f3ff; transition: 0.3s; }
     </style>
     
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Project A1 | Super Genius Dashboard</title>
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/adminlte.css') }}">
+</head>
+    
 
     
 </head>
@@ -298,7 +308,11 @@
         <script src="./assets/js/adminlte.js"></script>
 
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
 
+<script src="{{ url_for('static', filename='js/adminlte.js') }}"></script>
+<script src="{{ url_for('static', filename='js/god_mode_hud.js') }}"></script>
 
 
 
