--- a/templates/index.html
+++ b/templates/index.html
@@ -191,37 +191,38 @@
 <script src="{{ url_for('static', filename='js/god_mode_hud.js') }}"></script>
 
 
-<script src="./assets/js/repair_hud.js"></script>
+<script src="./static/js/repair_hud.js"></script>
     
-    <script src="./assets/js/onion_visualizer.js"></script>
-    <script src="./assets/js/reasoning_hud.js"></script>
-    <script src="./assets/js/mesh_visualizer.js"></script>
-    <script src="./assets/js/multimodal_hud.js"></script>
-    <script src="./assets/js/sandbox_hud.js"></script>
-<script src="./assets/js/stress_visualizer.js"></script>
+    <script src="./static/js/onion_visualizer.js"></script>
+    <script src="./static/js/reasoning_hud.js"></script>
+    <script src="./static/js/mesh_visualizer.js"></script>
+    <script src="./static/js/multimodal_hud.js"></script>
+    <script src="./static/js/sandbox_hud.js"></script>
+<script src="./static/js/stress_visualizer.js"></script>
     
-    <script src="./assets/js/cloud_hud.js"></script>
+    <script src="./static/js/cloud_hud.js"></script>
     
-<script src="./assets/js/expert_ui.js"></script>
-    <script src="./assets/js/rlhf_handler.js"></script>
-    <script src="./assets/js/bridge_ui.js"></script>
-    <script src="./assets/js/mesh_status.js"></script>
+<script src="./static/js/expert_ui.js"></script>
+    <script src="./static/js/rlhf_handler.js"></script>
+    <script src="./static/js/bridge_ui.js"></script>
+    <script src="./static/js/mesh_status.js"></script>
     
-    <script src="./assets/js/memory_monitor.js"></script>
-    <script src="./assets/js/personality_hud.js"></script>
+    <script src="./static/js/memory_monitor.js"></script>
+    <script src="./static/js/personality_hud.js"></script>
     
-<script src="./assets/js/solo_mode.js"></script>
+<script src="./static/js/solo_mode.js"></script>
     
-<script src="./assets/js/diagnosis.js"></script>
+<script src="./static/js/diagnosis.js"></script>
     
-    <script src="./assets/js/terminal_handler.js"></script>
+    <script src="./static/js/terminal_handler.js"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
         
+<script src="{{ url_for('static', filename='js/adminlte.js') }}"></script>
+  
         
-        
-        <script src="./assets/js/adminlte.js"></script>
+      
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
