--- a/templates/index.html
+++ b/templates/index.html
@@ -327,5 +327,8 @@
       addToScreen("> [SYSTEM] TERMINAL LINK: ONLINE", "#28a745");
   });
 </script>
+
+  <script src="/Static/js/jquery.min.js"></script> <script src="/Static/js/a1_dashboard_logic.js"></script>
+  
 </body>
 </html>
