--- a/templates/index.html
+++ b/templates/index.html
@@ -329,6 +329,12 @@
 </script>
 
   <script src="/Static/js/jquery.min.js"></script> <script src="/Static/js/a1_dashboard_logic.js"></script>
+  <li class="nav-item">
+    <a href="#" class="nav-link">
+        <i class="nav-icon fas fa-shield-alt"></i>
+        <p>Security Shield</p>
+    </a>
+  </li>
   
 </body>
 </html>
